    install ECL on the preferred destination (specified with "--prefix"
    parameter given to configure script).

* Pending changes since 16.1.2
** API changes
- Added better interface for package-locks
Introduced functions:
=ext:package-locked-p package=
=ext:lock-package package=
=ext:unlock-package package=
=ext:without-package-locks=
=ext:with-unlocked-package=

=defpackage= accepts new option =lock= to allow locking package on
creation:

#+BEGIN_SRC lisp
  (defpackage foo (:lock t))
#+END_SRC

- mp:holding-lock-p: introduce new function for multiprocessing.
Function verifies if lock is hold by the thread which calls the
function. Usage: =(mp:holding-lock-p my-lock)=.

- make-random-state: fix problem with simple-vectors
The correct initialization types for =make-random-state= are:
=(OR RANDOM-STATE FIXNUM (MEMBER T NIL))=.

Initializing a random state with an appropriate array (element type and
arity dependent on platform) is also possible.

- ext:random-state-array: new extension for random-states. Usage:
=(ext:random-state-array random-state)=.

- ext:terminate-process: new extension for external processes. Usage:
=(ext:terminate-process process)= with a second, optional boolean argument
whenever termination should be forced or not.

** Enhancements
- Implemented CDR-7
https://common-lisp.net/project/cdr/document/7/index.html

- Implemented CDRs: CDR-1, CDR-5, CDR-14
Both CDR-1 and CDR-5 were already implemented, CDR-14 made us to list them
in =*features*=
(https://common-lisp.net/project/cdr/document/14/index.html).

- if ECL is build with =--with-cxx= option, =:CXX-CORE= is present in
  =*features*=.

- deprecated configure option =--with-local-gmp= has been removed - use
  =--enable-gmp= (defaults to auto).

- configure options has been revised.

- ASDF has been upgraded to version 3.1.7.

- Bundled CLX has been purged
Lately I've fixed ECL support on portable CLX maintained by sharplispers on